Updates in Backend:
1) Changed the InventoryItemController to better reflect the changes in endpoints for future analytics;
2) Changes in StockHistoryController to allow better endpoints in dates changes in stock;
3) Updated the exception classes to better reflect errors;
4) Changes in Supplier for allow business rules for working: a supplier can have many merchandise in the database;
5) updated the tests as well