@@ -4,37 +4,38 @@ import com.smartsupplypro.inventory.dto.InventoryItemDTO;
 import com.smartsupplypro.inventory.enums.StockChangeReason;
 import com.smartsupplypro.inventory.mapper.InventoryItemMapper;
 import com.smartsupplypro.inventory.model.InventoryItem;
-import com.smartsupplypro.inventory.service.InventoryItemService;
 import com.smartsupplypro.inventory.repository.InventoryItemRepository;
 import com.smartsupplypro.inventory.repository.SupplierRepository;
+import com.smartsupplypro.inventory.service.InventoryItemService;
 import com.smartsupplypro.inventory.service.StockHistoryService;
 import com.smartsupplypro.inventory.validation.InventoryItemSecurityValidator;
 import com.smartsupplypro.inventory.validation.InventoryItemValidator;
-import org.springframework.stereotype.Service;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import static com.smartsupplypro.inventory.validation.InventoryItemValidator.assertFinalQuantityNonNegative;
+import static com.smartsupplypro.inventory.validation.InventoryItemValidator.assertPriceValid;
 
 /**
  * Service layer responsible for managing inventory item operations including
  * creation, update, deletion, and retrieval. Also coordinates stock history logging
  * and supplier validation.
- * <p>
- * This class centralizes business logic for inventory item management and ensures:
- * <ul>
- *   <li>Proper data validation and mapping between entity and DTO</li>
- *   <li>Supplier existence verification</li>
- *   <li>Automated stock change logging for all quantity-altering operations</li>
- *   <li>Enforcement of domain rules (e.g., deletion only allowed with specific reasons)</li>
- * </ul>
- * </p>
  *
- * @author
- * SmartSupplyPro Dev Team
+ * <p>Responsibilities:</p>
+ * <ul>
+ *   <li>Validate inputs and permissions</li>
+ *   <li>Map between entities and DTOs</li>
+ *   <li>Persist changes and write stock history (quantity + price snapshots)</li>
+ *   <li>Enforce domain rules (e.g., allowed deletion reasons)</li>
+ * </ul>
  */
 @Service
 public class InventoryItemServiceImpl implements InventoryItemService {
@@ -45,106 +46,80 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
     /**
      * Constructs the InventoryItemService with required dependencies.
-     *
-     * @param repository           the inventory item repository
-     * @param stockHistoryService the service for logging stock history
-     * @param supplierRepository  the repository for supplier validation
      */
     public InventoryItemServiceImpl(
-        InventoryItemRepository repository,
-        StockHistoryService stockHistoryService,
-        SupplierRepository supplierRepository
+            InventoryItemRepository repository,
+            StockHistoryService stockHistoryService,
+            SupplierRepository supplierRepository
     ) {
         this.repository = repository;
         this.stockHistoryService = stockHistoryService;
         this.supplierRepository = supplierRepository;
     }
 
-    /**
-     * Retrieves all inventory items in the system as DTOs.
-     *
-     * @return a list of all inventory item DTOs
-     */
+    /** {@inheritDoc} */
+    @Override
     public List<InventoryItemDTO> getAll() {
-        return repository.findAll().stream()
+        return repository.findAll()
+                .stream()
                 .map(InventoryItemMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /**
-     * Retrieves a single inventory item by its unique identifier.
-     *
-     * @param id the item ID
-     * @return an optional containing the found item DTO, or empty if not found
-     */
+    /** {@inheritDoc} */
+    @Override
     public Optional<InventoryItemDTO> getById(String id) {
-        return repository.findById(id)
-                .map(InventoryItemMapper::toDTO);
+        return repository.findById(id).map(InventoryItemMapper::toDTO);
     }
 
-    /**
-    * Performs paginated search for items by partial name, sorted by ascending price.
-    *
-    * @param name     partial or full name to search
-    * @param pageable pagination and sorting information
-    * @return paged list of matching inventory item DTOs
-    */
+    /** {@inheritDoc} */
+    @Override
     public Page<InventoryItemDTO> findByNameSortedByPrice(String name, Pageable pageable) {
-        System.out.println(" [findByNameSortedByPrice] Querying for name: " + name + " | pageable: " + pageable);
         Page<InventoryItem> page = repository.findByNameSortedByPrice(name, pageable);
-        System.out.println(" [findByNameSortedByPrice] Repository result is null? " + (page == null));
-    
-        if (page == null) {
-            return Page.empty();
-        }
-
-        return page.map(InventoryItemMapper::toDTO);
+        return page == null ? Page.empty() : page.map(InventoryItemMapper::toDTO);
     }
 
-
-    
     /**
-     * Persists a new inventory item after validating input data and logging its initial stock level.
-     *
-     * @param dto the inventory item data transfer object
-     * @return the saved inventory item DTO
+     * Persists a new inventory item after validating input data and logging its initial stock.
+     * Also records a stock history entry with the initial quantity and current unit price snapshot.
      */
+    @Override
     public InventoryItemDTO save(InventoryItemDTO dto) {
         InventoryItemValidator.validateBase(dto);
         InventoryItemValidator.validateInventoryItemNotExists(dto.getName(), dto.getPrice(), repository);
         validateSupplierExists(dto.getSupplierId());
 
-    
         InventoryItem entity = InventoryItemMapper.toEntity(dto);
 
         if (entity.getCreatedAt() == null) {
             entity.setCreatedAt(LocalDateTime.now());
         }
-
         if (entity.getMinimumQuantity() <= 0) {
-            entity.setMinimumQuantity(10); // default fallback value
+            entity.setMinimumQuantity(10); // sensible default
         }
 
         InventoryItem saved = repository.save(entity);
 
+        // Write INITIAL_STOCK with quantity and price snapshot
         stockHistoryService.logStockChange(
-            saved.getId(),
-            saved.getQuantity(),
-            StockChangeReason.INITIAL_STOCK,
-            saved.getCreatedBy()
+                saved.getId(),
+                saved.getQuantity(),
+                StockChangeReason.INITIAL_STOCK,
+                actorUsername(saved.getCreatedBy()),
+                saved.getPrice() // priceAtChange snapshot
         );
 
         return InventoryItemMapper.toDTO(saved);
     }
 
     /**
-    * Updates an existing inventory item by ID. Validates permissions, logs quantity changes,
-    * and maps back to DTO after persistence.
-    *
-    * @param id  the item ID to update
-    * @param dto the new inventory data
-    * @return an optional containing the updated inventory item DTO
-    */
+     * Updates an existing inventory item.
+     * <ul>
+     *   <li>Validates permissions</li>
+     *   <li>Writes a MANUAL_UPDATE history entry when quantity changes (with price snapshot)</li>
+     * </ul>
+     */
+    @Override
     public Optional<InventoryItemDTO> update(String id, InventoryItemDTO dto) {
         InventoryItemValidator.validateBase(dto);
         validateSupplierExists(dto.getSupplierId());
@@ -154,10 +129,8 @@ public class InventoryItemServiceImpl implements InventoryItemService {
         // Enforce role-based rules (e.g., only admin can update name/supplier)
         InventoryItemSecurityValidator.validateUpdatePermissions(existing, dto);
 
-        // Check for duplicate (name + price) only if name or price changed
         boolean nameChanged = !existing.getName().equalsIgnoreCase(dto.getName());
         boolean priceChanged = !existing.getPrice().equals(dto.getPrice());
-
         if (nameChanged || priceChanged) {
             InventoryItemValidator.validateInventoryItemNotExists(id, dto.getName(), dto.getPrice(), repository);
         }
@@ -166,22 +139,23 @@ public class InventoryItemServiceImpl implements InventoryItemService {
 
         existing.setName(dto.getName());
         existing.setQuantity(dto.getQuantity());
-
         if (priceChanged) {
+            assertPriceValid(dto.getPrice());
             existing.setPrice(dto.getPrice());
         }
-
         existing.setSupplierId(dto.getSupplierId());
         existing.setCreatedBy(dto.getCreatedBy());
 
         InventoryItem updated = repository.save(existing);
 
+        // Log quantity movement (if any) with current price snapshot
         if (quantityDiff != 0) {
             stockHistoryService.logStockChange(
                     updated.getId(),
                     quantityDiff,
                     StockChangeReason.MANUAL_UPDATE,
-                    updated.getCreatedBy()
+                    actorUsername(updated.getCreatedBy()),
+                    updated.getPrice()
             );
         }
 
@@ -189,31 +163,12 @@ public class InventoryItemServiceImpl implements InventoryItemService {
     }
 
     /**
-     * Validates that a given supplier exists by ID.
-     *
-     * @param supplierId the ID of the supplier to check
-     * @throws IllegalArgumentException if the supplier does not exist
+     * Deletes an item. Logs a full negative adjustment before deletion.
+     * Allowed reasons: SCRAPPED, DESTROYED, DAMAGED, EXPIRED, LOST, RETURNED_TO_SUPPLIER.
      */
-    private void validateSupplierExists(String supplierId) {
-        System.out.println(" [validateSupplierExists] Checking supplierId: " + supplierId);
-        boolean exists = supplierRepository.existsById(supplierId);
-        System.out.println(" [validateSupplierExists] existsById(" + supplierId + ") = " + exists);
-        if (!supplierRepository.existsById(supplierId)) {
-            throw new IllegalArgumentException("Supplier does not exist");
-        }
-    }
-
-    /**
-     * Deletes an inventory item with a mandatory stock change reason.
-     * Also logs the full quantity reduction to stock history before deletion.
-     *
-     * @param id     the ID of the item to delete
-     * @param reason the reason for deletion (must be valid)
-     * @throws IllegalArgumentException if item not found or reason is invalid
-     */
+    @Override
     public void delete(String id, StockChangeReason reason) {
-        System.out.println(" [delete] Attempting to delete item with ID: " + id);
-        if (reason != StockChangeReason.SCRAPPED && 
+        if (reason != StockChangeReason.SCRAPPED &&
             reason != StockChangeReason.DESTROYED &&
             reason != StockChangeReason.DAMAGED &&
             reason != StockChangeReason.EXPIRED &&
@@ -222,23 +177,92 @@ public class InventoryItemServiceImpl implements InventoryItemService {
             throw new IllegalArgumentException("Invalid reason for deletion");
         }
 
-        Optional<InventoryItem> itemOpt = repository.findById(id);
-        if (itemOpt.isPresent()) {
-            InventoryItem item = itemOpt.get();
-            System.out.println(" [delete] Found item: " + item.getName() + " | Quantity: " + item.getQuantity());
-    
-            stockHistoryService.logStockChange(
+        InventoryItem item = repository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Item not found"));
+
+        // Log full removal (negative) with price snapshot, then delete
+        stockHistoryService.logStockChange(
                 item.getId(),
                 -item.getQuantity(),
                 reason,
-                item.getCreatedBy()
-            );
-    
-            repository.deleteById(id);
-        } else {
-            System.out.println(" [delete] No item found for ID: " + id);
-            throw new IllegalArgumentException("Item not found");
+                actorUsername(item.getCreatedBy()),
+                item.getPrice()
+        );
+
+        repository.deleteById(id);
+    }
+
+    /**
+     * Adjusts quantity by delta (positive or negative). Writes a history entry with price snapshot.
+     */
+    @Override
+    public InventoryItemDTO adjustQuantity(String id, int delta, StockChangeReason reason) {
+        InventoryItem item = repository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Item not found"));
+
+        int newQty = item.getQuantity() + delta;
+        assertFinalQuantityNonNegative(newQty);
+
+        item.setQuantity(newQty);
+        InventoryItem saved = repository.save(item);
+
+        stockHistoryService.logStockChange(
+                saved.getId(),
+                delta,
+                reason,
+                actorUsername(saved.getCreatedBy()),
+                saved.getPrice()
+        );
+
+        return InventoryItemMapper.toDTO(saved);
+    }
+
+    /**
+     * Updates unit price and writes a PRICE_CHANGE history entry with change=0 and price snapshot.
+     */
+    @Override
+    public InventoryItemDTO updatePrice(String id, BigDecimal newPrice) {
+        assertPriceValid(newPrice);
+
+        InventoryItem item = loadOrThrow(id);
+        item.setPrice(newPrice);
+        InventoryItem saved = repository.save(item);
+
+        stockHistoryService.logStockChange(
+                id,
+                0, // zero quantity for price events
+                StockChangeReason.PRICE_CHANGE,
+                currentUsername(),
+                newPrice
+        );
+
+        return InventoryItemMapper.toDTO(saved);
+    }
+
+    /* ---------- helpers ---------- */
+
+    private void validateSupplierExists(String supplierId) {
+        if (!supplierRepository.existsById(supplierId)) {
+            throw new IllegalArgumentException("Supplier does not exist");
         }
     }
+
+    private InventoryItem loadOrThrow(String id) {
+        return repository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Item not found: " + id));
+    }
+
+    /**
+     * Prefer a non-null, meaningful actor for audit trails:
+     * - If the entity has 'createdBy', use it; otherwise fall back to the security principal.
+     */
+    private String actorUsername(String createdBy) {
+        return (createdBy != null && !createdBy.isBlank()) ? createdBy : currentUsername();
+    }
+
+    private String currentUsername() {
+        Authentication a = SecurityContextHolder.getContext() != null
+                ? SecurityContextHolder.getContext().getAuthentication() : null;
+        return a != null ? a.getName() : "system";
+    }
 }
-// This code provides the InventoryItemService class, which manages inventory items in the system.
